--- a/currency_converter.html
+++ b/currency_converter.html
@@ -3,7 +3,9 @@
 <head>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script>
-$(document).ready(function(){
+$(document).ready(
+
+function set_result_label(){
 
 	$("#CAD").click(function(){
         $("#equiv_text").text(function(){
@@ -33,11 +35,10 @@ function set_result_text(result_value){
 };
 
 function validate() {
-    var x = document.getElementById("USD_amount").value;
+    var x = document.getElementById("USD_amt").value;
     var text;
     if (x == "") {
         alert("USD must be filled out");
-		text = "USD must be filled out";
         return false;
     } else {
 
@@ -47,8 +48,8 @@ function validate() {
         } else {
             text = "Input OK";
         }
+        $("#error_msg").text(text);
     }
-        document.getElementById("error_msg").innerHTML = text;
 }
 </script>
 </head>
@@ -57,7 +58,7 @@ function validate() {
 <p>Converting U. S. Dollars to other currencies</p>
 
 <p>U. S. Dollar amount</p>
-<input type="text" id="USD_amt" name="USD_amount" value="0">
+<input type="text" id="USD_amt" name="USD_amount">
 <br>
 <label><input type="radio" id="CAD" value="CAD_choice">Canadian Dollars</label>
 <br>
