Renamed set function to be more accurate

--- a/currency_converter.html
+++ b/currency_converter.html
@@ -30,7 +30,7 @@ function page_reload(){
 	location.reload();
 };
 
-function set_result_text(result_value){
+function set_result_value(result_value){
 	$("#Other_amt").val(result_value);
 };
 
@@ -71,7 +71,7 @@ function validate() {
 <br>
 <button id="set_other_amount" onclick="validate()">Validate</button>
 <button id="set_other_amount" onclick="page_reload()">Reset</button>
-<button id="set_other_amount" onclick="set_result_text('5')">Set to 5</button>
+<button id="set_other_amount" onclick="set_result_value('5')">Set to 5</button>
 <button onclick="document.getElementById('error_msg').innerHTML=Date()">The time is?</button>
 
 <p id="error_msg"></p>
