--- a/currency_converter.html
+++ b/currency_converter.html
@@ -34,11 +34,11 @@ function calculate_result(){
 	var result_value = 0;
 	var USD_input = document.getElementById("USD_amt").value;
 
-	if ($("#CAD").prop("checked", true)){
+	if ($("#CAD").is(':checked')){
 		var CAD_multiplier = 1.2;
 		result_value = USD_input * CAD_multiplier;
 	}
-	else if ($("#MXN").prop("checked", true)){
+	else if ($("#MXN").is(':checked')){
 		var MXN_multiplier = 0.9;
 		result_value = USD_input * MXN_multiplier;
 	}
