Introducing inconsistency in label update for MXN

--- a/currency_converter.html
+++ b/currency_converter.html
@@ -15,7 +15,7 @@ function set_result_label(){
 	
     $("#MXN").click(function(){
         $("#equiv_text").text(function(){
-			return "Equivalent in " + $("#MXN").parent('label').text();
+			return "Equivalent in " + "Pesos";
 		});
     });
 	
