Improve user-facing feedback in validation message

--- a/currency_converter.html
+++ b/currency_converter.html
@@ -64,7 +64,7 @@ function validate() {
 
         // If x is Not a Number or less than one
         if (isNaN(x) || x < 1 ) {
-            text = "Input not valid";
+            text = "Input " + x + " not valid";
         } else {
             text = "Input OK";
         }
