Just enough styling

--- a/currency_converter.html
+++ b/currency_converter.html
@@ -75,17 +75,21 @@ function validate() {
 </head>
 <body>
 
-<p>Converting U. S. Dollars to other currencies</p>
+<p style="color:purple;font-size:150%"><b>Converting U. S. Dollars to other currencies</b></p>
 
-<p>U. S. Dollar amount</p>
+<p style="color:purple">U. S. Dollar amount</p>
 <input type="text" id="USD_amt" name="USD_amount">
 <br>
+<br>
+<div style="color:purple;border: 1px solid purple">
 <label><input type="radio" id="CAD" value="CAD_choice">Canadian Dollars</label>
 <br>
 <label><input type="radio" id="MXN" value="MXN_choice">Mexican Pesos</label>
 <br>
 <label><input type="radio" id="EUR" value="EUR_choice">Euros</label>
-<p id="equiv_text">Equivalent in ...</p>
+</div>
+<br>
+<p style="color:purple" id="equiv_text">Equivalent in ...</p>
 <input type="text" id="Other_amt" name="Other_amount" value="0">
 <br>
 <br>
